<resources>

    <string name="app_name">Randwik</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_manager">Randwik</string>
    <string name="bBack">Back</string>
    <string name="bRandWiki">Get Random Article</string>
    <string name="bPref">Preferences</string>
    <string name="bTopics">Topics</string>
    <string name="bAbout">About</string>
    <string name="bShare">Share</string>
    <string name="bExit">Exit...</string>
    <string name="bLanguages">Choose Language</string>
    
</resources>