<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/topics"
        android:title="@string/bTopics"/>
    <item
        android:id="@+id/about"
        android:title="@string/bAbout"/>
    <item
        android:id="@+id/exit"
        android:title="@string/bExit"/>
    <item
        android:id="@+id/ACIgetArticle"
        android:icon="@drawable/transparent_wikipedia_icon"
        android:showAsAction="always"
        android:title="@string/bRandWiki"/>
    <item
        android:id="@+id/ACIshareArticle"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always"
        android:title="@string/bShare"/>

</menu>