<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6" >

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6" >

        <Button
            android:id="@+id/bBack"
            android:layout_width="70dp"
            android:layout_height="55dp"
            android:text="@string/bBack" />

        <Button
            android:id="@+id/bRandWiki"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/bRandWiki" />

        <ImageButton
            android:id="@+id/bPref"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:contentDescription="@string/bPref"
            android:src="@drawable/pref_button" />
    </LinearLayout>

    <WebView
        android:id="@+id/wvBrowser"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" />

</LinearLayout>